--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <html lang="en" dir="ltr">
   <head>
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-145890894-1"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag() {
@@ -34,7 +33,7 @@
   -->
     <div>
       <p class="header">
-        <a href="/">FHSched [Beta]</a>
+        <a href="/">FHSched [Bet]</a>
       </p>
     </div>
     <div class="nav-bar">
