--- a/index.html
+++ b/index.html
@@ -77,14 +77,22 @@
     <p class="bottom-space"></p>
     <footer>
       <div class="foot">
-        <p><a href="privacy-policy/">Privacy Policy</a></p>
-        <ul class="red-footer">
-          <li class="red-footer">2019 CodingForFishers</li>
-          <li class="red-footer">Version 1.4.4</li>
+        <ul>
+          <li> <a href="privacy-policy/">Privacy Policy</a> </li>
         </ul>
-        <address style="all: unset">
+
+        <ul>
+          <li>2019 CodingForFishers</li>
+          <li>Version 1.4.4</li>
+        </ul>
+        <ul>
+          <li> 
+            <address style="all: unset">
           Contact: <a href="mailto:fhsched2019@gmail.com">fhsched2019@gmail.com</a>
-        </address>
+        </address> 
+      </li>
+        </ul>
+        
       </div>
     </footer>
     <!--
