--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
         <a href="/">FHSched</a>
       </p>
     </div>
-      <ul class="nav-bar">
-        <li><a href="/">Home</a></li>
-        <li><a href="calendar/">Calendar</a></li>
-        <li style = "float: right;"><a role="button" onclick="localStorage.setItem('mode', (localStorage.getItem('mode') || 'dark') === 'dark' ? 'light' : 'dark'); localStorage.getItem('mode') === 'dark' ? document.querySelector('body').classList.add('dark') : document.querySelector('body').classList.remove('dark')" title="Dark/light" id="darkMode"> Light | Dark Mode</a></li>
-      </ul>
+    <ul class="nav-bar">
+      <li><a href="/">Home</a></li>
+      <li><a href="calendar/">Calendar</a></li>
+      <li style = "float: right;"><a role="button" onclick="localStorage.setItem('mode', (localStorage.getItem('mode') || 'dark') === 'dark' ? 'light' : 'dark'); localStorage.getItem('mode') === 'dark' ? document.querySelector('body').classList.add('dark') : document.querySelector('body').classList.remove('dark')" title="Dark/light" id="darkMode"> Light | Dark Mode</a></li>
+    </ul>
     <div id = "periodDiv" class="time-schedule">
       <p id = "period" class = "period-display">No Period</p>
       <p id = "timer" class = "timer">Not School Hours</p>
@@ -77,14 +77,20 @@
     <p class="bottom-space"></p>
     <footer>
       <div class="foot">
-        <p><a href="privacy-policy/">Privacy Policy</a></p>
-        <ul class="red-footer">
-          <li class="red-footer">2019 CodingForFishers</li>
-          <li class="red-footer">Version 1.4.4</li>
+        <ul>
+          <li><a href="privacy-policy/">Privacy Policy</a></li>
         </ul>
-        <address style="all: unset">
-          Contact: <a href="mailto:fhsched2019@gmail.com">fhsched2019@gmail.com</a>
-        </address>
+        <ul>
+          <li>2019 CodingForFishers</li>
+          <li>Version 1.4.4</li>
+        </ul>
+        <ul>
+          <li>
+            <address style="all: unset">
+              Contact: <a href="mailto:fhsched2019@gmail.com">fhsched2019@gmail.com</a>
+            </address>
+          </li>
+        </ul>
       </div>
     </footer>
     <!--
