--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </div>
     <ul class="nav-bar">
       <li><a href="/">Home</a></li>
-      <li><a href="calendar/">Calendar</a></li>
+      <li><a href="Calendar/">Calendar</a></li>
       <li style = "float: right;"><a role="button" onclick="localStorage.setItem('mode', (localStorage.getItem('mode') || 'dark') === 'dark' ? 'light' : 'dark'); localStorage.getItem('mode') === 'dark' ? document.querySelector('body').classList.add('dark') : document.querySelector('body').classList.remove('dark')" title="Dark/light" id="darkMode"><img src = "images/sunmoon.png" width = "30" height = "30"></a></li>
     </ul>
     <div id = "periodDiv" class="time-schedule">
