--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   -->
     <div>
       <p class="header">
-        <a href="/">FHSched [Beta]</a>
+        <a href="/">FHSched</a>
       </p>
     </div>
     <ul class="nav-bar">
