--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <script type="text/javascript" src="js/FHSched_Schedule_Data_V_1.7.js"> </script>
     <script type="text/javascript" src="js/FHSched_Calendar_Data_V_1.3.js"></script>
-    <link rel="stylesheet" href="css/FHSched_V_1.13.css">
+    <link rel="stylesheet" href="css/FHSched_V_1.14.css">
     <link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   </head>
@@ -31,20 +31,31 @@
     <!--
     <img class="logo" src="images/weblogo.png" width="80" height="74">
   -->
-    <a class = "ham-a"><img src="images/Hamburger_icon.png" class="ham"></a>
-    <a href = "https://www.in.ng.mil/" class="ng-logo-a"><img src="images/National_Guard_Logo.png" class = "ng-logo"></a>
+    <a id = "ham-a" class = "ham-a" role="button" onclick="showSidebar()"><img src="images/Hamburger_icon.png" class="ham"></a>
+    <a class="ng-logo-a" role="button" onclick="showNGBanner()">
+      <img src="images/National_Guard_Logo.png" class = "ng-logo">
+    </a>
+
     <div>
       <p class="header">
         <a href="/">FHSched</a>
       </p>
     </div>
 
-    <!--
-    <ul class="nav-bar">
-      <li><a href="/">Home</a></li>
-      <li style = "float: right;"><a role="button" onclick="localStorage.setItem('mode', (localStorage.getItem('mode') || 'dark') === 'dark' ? 'light' : 'dark'); localStorage.getItem('mode') === 'dark' ? document.querySelector('body').classList.add('dark') : document.querySelector('body').classList.remove('dark')" title="Dark/light" id="darkMode"> Light | Dark Mode</a></li>
-    </ul>
-    -->
+    <p class="nav-bar">
+
+    <div class="slider" id="sidebar">
+      <a class = "close-sidebar" role="button" onclick="showSidebar()">
+        <img src="images/close-icon.png" class="close-icon">
+      </a>
+      <ul>
+        <li><a href="../">Home</a></li>
+        <!--
+        <li><a href="../calendar/">Calendar</a></li>
+      -->
+        <li><a role="button" onclick="localStorage.setItem('mode', (localStorage.getItem('mode') || 'dark') === 'dark' ? 'light' : 'dark'); localStorage.getItem('mode') === 'dark' ? document.querySelector('body').classList.add('dark') : document.querySelector('body').classList.remove('dark')" title="Dark/light" id="darkMode"> Light | Dark Mode</a></li>
+      </ul>
+    </div>
 
     <div id = "periodDiv" class="time-schedule">
       <p id = "period" class = "period-display">No Period</p>
@@ -71,7 +82,15 @@
       </button>
     </div>
 
-    <p class = "splash">Relive the Mudsock: <a href="https://youtu.be/DF6qBzZxx6E">Youtube</a><br>Spirit week! Bring your pajamas?<br>Tomorrow, represent in color wars!<br><span class = "splash-box"> &nbsp; <span style="color:white">Freshman</span> | <span style="color:silver">Sophomore</span> | <span style="color:black">Junior</span> | <span style="color:red">Senior</span> &nbsp; </span></p>
+    <p class = "splash">
+      Proudly sponsored by <span style="color:red">National Guard</span>!
+      <br>
+      Please give us feedback: <a href="https://docs.google.com/forms/d/e/1FAIpQLSfSIelvKL5dPRamplLnBuKzmSBUiblDPu9efNOq0O1m1e_E1Q/viewform" target = "_blank">Google Forms</a>
+      <br>
+      Adding to the space day atmosphere?
+      <br>
+      Dress as a character tomorrow!
+    </p>
 
     <div id = "wrongLunchDiv" class="wrongLunchDiv">
       <button onclick = "resetLunch()" class = "wrongLunchBtn">
@@ -87,7 +106,7 @@
         </ul>
         <ul>
           <li>2019 CodingForFishers</li>
-          <li>Version 1.4.4</li>
+          <li>Version 1.4.5</li>
         </ul>
         <ul>
           <li>
@@ -98,6 +117,23 @@
         </ul>
       </div>
     </footer>
+
+    <div id="national-guard-banner" class="national-guard-banner">
+      <div class="container">
+        <p>
+          Get started here:
+          <a href="https://nationalguard.com/get-started" target="_blank">https://nationalguard.com/get-started</a>
+          <br>
+          Contact: SGT Abigail Bartholomew | (765) 265-2906
+          <br>
+          <a href="https://www.instagram.com/sgtabbibart/?hl=en" target="_blank">https://www.instagram.com/sgtabbibart/?hl=en</a>
+        </p>
+        <a class = "close-sidebar" role="button" onclick="showNGBanner()">
+          <img src="images/close-icon.png" class="close-icon">
+        </a>
+      </div>
+    </div>
+
     <!--
     <?php
     if(!isset($_COOKIE["accept-cookies"])) {
@@ -573,6 +609,7 @@
       return "";
     }
 
+    //Loads darkmode upon the website refresh
     function loadDarkMode()
     {
       document.addEventListener('DOMContentLoaded', (event) => {
@@ -581,7 +618,19 @@
       editLunchPeriod(currentSchedule["lunch"]);
     }
 
-    //document.querySelector('body').classList.add('dark');
+    //Changes styles for the sidebar
+    function showSidebar()
+    {
+      document.querySelector("#sidebar").classList.toggle('active');
+      document.querySelector("#ham-a").classList.toggle('active');
+    }
+
+    //Changes styles for National Guard Banner
+    function showNGBanner()
+    {
+      document.querySelector("#national-guard-banner").classList.toggle('active');
+    }
+
     loadDarkMode();
 
     </script>
