--- a/about/index.html
+++ b/about/index.html
@@ -22,7 +22,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
   </head>
-  <body class = "dark">
+  <body class = "dark" ontouchstart="">
     <!--
     <img class="logo" src="images/weblogo.png" width="80" height="74">
   -->
@@ -43,17 +43,20 @@
       </a>
       <ul>
         <li><a href="../">Home</a></li>
+        <li><a href="../about/">About</a></li>
         <!--
         <li><a href="../calendar/">Calendar</a></li>
-      -->
-        <li><a role="button" onclick="localStorage.setItem('mode', 'classic'); document.querySelector('body').className = ''; document.querySelector('body').classList.add('classic')">Classic Mode</a></li>
-        <li><a role="button" onclick="localStorage.setItem('mode', 'dark'); document.querySelector('body').className = ''; document.querySelector('body').classList.add('dark')">Dark Mode</a></li>
-        <li><a role="button" onclick="localStorage.setItem('mode', 'cherry'); document.querySelector('body').className = ''; document.querySelector('body').classList.add('cherry')">Cherry Mode</a></li>
-        <li><a role="button" onclick="localStorage.setItem('mode', 'aqua'); document.querySelector('body').className = ''; document.querySelector('body').classList.add('aqua')">Aqua Mode</a></li>
+        -->
+        <li><a role="button" onclick="localStorage.setItem('mode', 'classic'); document.querySelector('body').className = ''; document.querySelector('body').classList.add('classic')" title="Dark/light">Classic Mode</a></li>
+        <li><a role="button" onclick="localStorage.setItem('mode', 'dark'); document.querySelector('body').className = ''; document.querySelector('body').classList.add('dark')" title="Dark/light">Dark Mode</a></li>
+        <!--
+        <li><a role="button" onclick="localStorage.setItem('mode', 'cherry'); document.querySelector('body').className = ''; document.querySelector('body').classList.add('cherry')" title="Dark/light">Cherry Mode</a></li>
+        <li><a role="button" onclick="localStorage.setItem('mode', 'aqua'); document.querySelector('body').className = ''; document.querySelector('body').classList.add('aqua')" title="Dark/light">Aqua Mode</a></li>
+        -->
       </ul>
     </div>
 
-    <div class="container">
+    <div class="about-container">
       <h class = "about-header">Meet the Team</h>
     </div>
     <div class="team-grid">
@@ -62,10 +65,10 @@
           <div class="team-card">
             <img src="../images/about_images/Matt_Ghera.jpg" alt="">
             <div class="bio">
-              <p>Matt is curious and creative when it comes to discovering new and innovative ideas to make everyone's lives easier. This curiosity and creativity led to the creation of FHSched and the everlasting improvments. He spends most of his time studying to take a test which he will inevitably make stupid mistakes on, then sleep the weekend away.</p>
-              <a class = "bio-social bio-tw" href="https://www.instagram.com/_matthew_ghera_/" target = "_blank">
+              <p>Matt is curious and creative when it comes to discovering new and innovative ideas to make everyone's lives easier. This curiosity and creativity led to the creation of FHSched and the everlasting improvements. He spends most of his time studying to take a test which he will inevitably make stupid mistakes on, then sleep the weekend away.</p>
+              <a class = "bio-social bio-ig" href="https://www.instagram.com/_matthew_ghera_/" target = "_blank">
               </a>
-              <a class = "bio-social bio-snap" href="" target = "_blank">
+              <a class = "bio-social bio-snap" href="https://www.snapchat.com/add/matt_ghera" target = "_blank">
               </a>
             </div>
           </div>
@@ -77,9 +80,9 @@
       <div class="team-space">
         <div class="team">
           <div class="team-card">
-            <img src="../images/about_images/temp_profile.jpg" alt="">
+            <img src="../images/about_images/Dane_Trainor1.jpg" alt="">
             <div class="bio">
-              <p>Dane communicates with sponsors and clients for future deals, hoping to pursue a degree in business management. Dane enjoys hiking and spending time with family, always brimming with an over-supply of constructive criticism. When free, he'll be doing... something or other.</p>
+              <p>Dane communicates with sponsors and clients for future deals, hoping to pursue a degree in business management. Dane enjoys hiking and spending time with family, always brimming with an over-supply of constructive criticism. When free, he'll be doing... something, somewhere.</p>
             </div>
           </div>
           <h2>Dane Trainor</h2>
@@ -93,7 +96,7 @@
             <img src="../images/about_images/Gabriel_Iskandar.jpg" alt="">
             <div class="bio">
               <p>Gabriel is lively and beaming with energy, pouring his creativity into developing the main website. He uses his energy to code the main page and other parts of the website, eager to improve the experience for all. In his spare time, you may find him playing Minecraft, doing parkour or just having a laugh.</p>
-              <a class = "bio-social bio-snap" href="" target = "_blank">
+              <a class = "bio-social bio-snap" href="https://www.snapchat.com/add/themclionsheep" target = "_blank">
               </a>
             </div>
           </div>
@@ -105,16 +108,21 @@
       <div class="team-space">
         <div class="team">
           <div class="team-card">
-            <img src="../images/about_images/temp_profile.jpg" alt="">
+            <img src="../images/about_images/Patrick_Nusbaum.jpg" alt="">
             <div class="bio">
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+              <p>Since Patrick Nusbaum was in 5th grade, he was naturally drawn towards technology and helping others learn how to use it. During this time, he also learned about his love for filmmaking. Since then Patrick has taught himself many professional filmmaking techniques that have come in handy for his short films and freelance work for clients. Patrick currently helps out with designing and website hosting for FHSched.</p>
+              <a class = "bio-social bio-ig" href="https://www.instagram.com/patrick.nusbaum/" target = "_blank">
+              </a>
+              <a class = "bio-social bio-yt" href="https://www.youtube.com/channel/UCIeNWs2G7_Dt_hDVEjLmcuw" target = "_blank">
+              </a>
             </div>
           </div>
-          <h2>Patrick Nusbam</h2>
+          <h2>Patrick Nusbaum</h2>
           <h3>Co-founder / Graphic Designer</h3>
         </div>
       </div>
 
+      <!--
       <div class="team-space">
         <div class="team">
           <div class="team-card">
@@ -127,13 +135,14 @@
           <h3>Server Manager</h3>
         </div>
       </div>
+    -->
 
       <div class="team-space">
         <div class="team">
           <div class="team-card">
             <img src="../images/about_images/Logan_Cover.png" alt="">
             <div class="bio">
-              <p>Logan is a hard-working individual who is very passionate about coding, especially soft-ware development. He ranked the best on curiosity for his character day evaluation, but judging by his photo, it should have been his stunning looks and lovable face. Logan hopes to extend his knowledge in web development, as to attain a career in creating and maintaining websites.</p>
+              <p>Logan is a hard-working individual who is very passionate about coding, especially software development. He ranked the best on curiosity for his character day evaluation, but judging by his photo, it should have been his stunning looks and lovable face. Logan hopes to extend his knowledge in web development, as to attain a career in creating and maintaining websites.</p>
             </div>
           </div>
           <h2>Logan Cover</h2>
@@ -146,8 +155,8 @@
           <div class="team-card">
             <img src="../images/about_images/John_Eberle.jpg" alt="">
             <div class="bio">
-              <p>John is passionate about learning and finance, hoping to start a buisness some day. He enjoys hanging with friends and playing lacrosse in his free time. He is always filled with humor and a love for his family, but more importantly organs and food used to function from day to day.</p>
-              <a class = "bio-social bio-tw" href="https://www.instagram.com/john_eberle30/" target = "_blank">
+              <p>John is passionate about learning and finance, hoping to start a business some day. He enjoys hanging with friends and playing lacrosse in his free time. He is always filled with humor and a love for his family, but more importantly organs and food used to function from day to day.</p>
+              <a class = "bio-social bio-ig" href="https://www.instagram.com/john_eberle30/" target = "_blank">
               </a>
             </div>
           </div>
@@ -161,7 +170,7 @@
           <div class="team-card">
             <img src="../images/about_images/Aaron_Ni.jpg" alt="">
             <div class="bio">
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+              <p>Aaron is a sensible, often unassuming guy, who is reliable and is known to get things done.  He is one of the Computer Science Club heads and works as a web developer for the FHSched site.  He works on many things on the site ranging from the main site to Android app development.  Although he's keen on web development, his true passion is cloud computing and hopes to one day develop his own business around cloud computing.</p>
             </div>
           </div>
           <h2>Aaron Ni</h2>
@@ -174,7 +183,9 @@
           <div class="team-card">
             <img src="../images/about_images/David_Kim.jpg" alt="">
             <div class="bio">
-              <p>David is a part of the IOS development team for FHSched, building and maintaining the app for FHSched. His hobbies include programming and playing basketball.</p>
+              <p>David is a part of the IOS development team for FHSched, building and maintaining the app for FHSched. His hobbies include programming and playing basketball. He likes to try new things like traveling, learning, and playing the trumpet.</p>
+              <a class = "bio-social bio-ig" href="https://www.instagram.com/davidkim1203/" target = "_blank">
+              </a>
             </div>
           </div>
           <h2>David Kim</h2>
@@ -185,9 +196,9 @@
       <div class="team-space">
         <div class="team">
           <div class="team-card">
-            <img src="../images/about_images/temp_profile.jpg" alt="">
+            <img src="../images/about_images/Arjav_Seshachalam.png" alt="">
             <div class="bio">
-              <p>Arjav .... likes spending time with family, likes to code occcasionally, play games. Arjav plans a lot however procrastinates at the end </p>
+              <p>Arjav's creativity and artistic energy has pushed him to work with front-end development. This has also lead to a love for drawing and painting, as well as spending time with family, and playing games. Although planned for productivity, Arjav sometimes finds himself in a loop of procrastination, which can push his creativity further.</p>
             </div>
           </div>
           <h2>Arjav Seshachalam</h2>
@@ -195,6 +206,7 @@
         </div>
       </div>
 
+      <!--
       <div class="team-space">
         <div class="team">
           <div class="team-card">
@@ -207,6 +219,7 @@
           <h3>Public Relations</h3>
         </div>
       </div>
+    -->
     </div>
 
     <p class="bottom-space"></p>
@@ -217,7 +230,7 @@
         </ul>
         <ul>
           <li>2019 CodingForFishers</li>
-          <li>Version 1.4.5</li>
+          <li>Version 1.4.6</li>
         </ul>
         <ul>
           <li>
