--- a/Calendar/SeptemberCalendar.html
+++ b/Calendar/SeptemberCalendar.html
@@ -257,11 +257,11 @@ h
       <header class="w3-container w3-red">
         <span onclick="document.getElementById('id05').style.display='none'"
         class="w3-button w3-display-topright">&times;</span>
-        <h2>Modal Header</h2>
+        <h2>Daily Events</h2>
       </header>
       <div class="w3-container">
         <font color="black">
-          <p>Daily Events</p>
+          <p>Event 5</p>
         </font>
       </div>
       <footer class="w3-container w3-red">
