added aqua mode to the Calendar + background image
it look kinda cool

--- a/Calendar/SeptemberCalendar.html
+++ b/Calendar/SeptemberCalendar.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="../css/FHSched_V_1.14.css">
     <link rel="stylesheet" href="../css/Dark_Mode_1.0.css">
     <link rel="stylesheet" href="../css/Cherry_Mode_1.0.css">
+    <link rel="stylesheet" href="../css/Aqua_Mode_1.0.css">
     <link rel="stylesheet" href="../css/Template_Mode_1.0.css">
 
 
@@ -44,6 +45,7 @@
       <li><a role="button" onclick="localStorage.setItem('mode', 'classic'); document.querySelector('body').className = ''; document.querySelector('body').classList.add('classic')" title="Dark/light">Classic Mode</a></li>
       <li><a role="button" onclick="localStorage.setItem('mode', 'dark'); document.querySelector('body').className = ''; document.querySelector('body').classList.add('dark')" title="Dark/light">Dark Mode</a></li>
       <li><a role="button" onclick="localStorage.setItem('mode', 'cherry'); document.querySelector('body').className = ''; document.querySelector('body').classList.add('cherry')" title="Dark/light">Cherry Mode</a></li>
+      <li><a role="button" onclick="localStorage.setItem('mode', 'aqua'); document.querySelector('body').className = ''; document.querySelector('body').classList.add('aqua')" title="Dark/light">Aqua Mode</a></li>
       <!--
       <li><a role="button" onclick="localStorage.setItem('mode', 'aqua'); document.querySelector('body').className = ''; document.querySelector('body').classList.add('aqua')" title="Dark/light">Aqua Mode</a></li>
       -->
